<resources>
    <string name="app_name">OrderApp</string>
    <string name="hello_world">Hello World!</string>
    <string name="wybierz_konfiguracje">Choose your configuration</string>
    <string name="wybrana_konfiguracja">Your new PC</string>
    <string name="dobierz_dodatki">Any accessories?</string>
    <string name="akc_klawiatura">Keyboard</string>
    <string name="akc_mysz">Mouse</string>
    <string name="akc_headset">Headset</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="in_stock">In Stock</string>
    <string name="your_cart_text">Your cart</string>
    <string name="open_configurator_text">Open configurator</string>
    <string name="wartosc_zamowienia">Order total:</string>
    <string name="pln_text">" PLN"</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="usun">Remove</string>
    <string name="qty">Quantity:</string>
    <string name="about">About</string>
    <string name="order_history">Order history</string>
    <string name="submit_order">Submit order</string>
    <string name="ordered_at">Ordered at</string>
    <string name="submit_order_dialog">Submitting order</string>
    <string name="is_firma">If you are ordering for a company, please enter company name below (otherwise, leave it empty)</string>
    <string name="company_name">Company name</string>
    <string name="thank_you">Thank You!</string>
    <string name="thank_you_for_ordering">Thank You for your order! We have sent you an E-Mail/SMS confirmation!</string>
    <string name="register_text">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-Mail address</string>
    <string name="password_text">Password</string>
    <string name="repeat_password_text">Repeat password</string>
    <string name="login_error">Login must be at least 8 characters long</string>
    <string name="imie_error">First name cannot be empty</string>
    <string name="nazwisko_error">Last name cannot be empty</string>
    <string name="email_error">This is not a valid E-Mail address</string>
    <string name="password_error">Password must be at least 8 characters long, include at least 1 uppercase letter, 1 number and 1 special character</string>
    <string name="repeat_password_error">Passwords are not matching</string>
    <string name="login_taken">This login is already taken</string>
    <string name="registered_successful">Successfully registered</string>
    <string name="login_text">Login</string>
    <string name="login_failed">Login failed</string>
    <string name="incorrect_login_password">Incorrect Login or Password</string>
    <string name="no_order_history">You have no orders! It\'s time to change that</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="log_out_text">Log out</string>
    <string name="for_company">For company</string>
    <string name="about_app_text">About OrderApp</string>
    <string name="about_app_description">This app was created by Hubert Klonowski (Programmist IVP) as a project for Mobile Apps Programming subject.</string>
    <string name="share">Share</string>
    <string name="phone_text">Phone number</string>
    <string name="phone_error">Phone number must be 9 digits long</string>
    <string name="ordered_sms">Order has been placed. Order total:</string>
    <string name="sms_denied">Permission denied to send SMS. Disabling that functionality.</string>
    <string name="sms_disabled">Sending SMS functionality disabled. Unable to send order confirmation.</string>
</resources>