<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <TextView
        android:id="@+id/yourCartText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_cart_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/emptyCartMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_cart"
        android:textSize="24sp"
        android:layout_below="@id/yourCartText"
        android:visibility="gone"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:id="@+id/cart_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_below="@id/yourCartText"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/cartLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/cartOrderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_below="@+id/cart_scroll_view"
        android:layout_marginTop="10dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cart_scroll_view"
        android:layout_toEndOf="@id/cartOrderTotal"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:text="@string/pln_text"/>

    <RelativeLayout
        android:id="@+id/BtnsHolderCartActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/open_configurator"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:text="@string/open_configurator_text"
            android:textSize="12sp"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/submitOrderBtn"
            android:layout_width="150dp"
            android:height="70dp"
            android:backgroundTint="@color/teal_700"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/open_configurator"
            android:enabled="false"
            android:text="@string/submit_order"
            android:textSize="12sp"
            android:layout_margin="10dp"/>

    </RelativeLayout>



</RelativeLayout>